@@ -9,7 +9,7 @@
 
 from docutils import nodes
 from docutils.parsers.rst import directives
-from docutils.parsers.rst.directives import images
+from docutils.parsers.rst.directives import images, tables
 
 
 class Figure(images.Figure):
@@ -34,5 +34,20 @@ class Figure(images.Figure):
 
         return [figure_node]
 
+class RSTTable(tables.RSTTable):
+    """Adds an option to the table directive which allows for the title to below
+    displayed below the table.
+    """ 
+    option_spec = tables.Table.option_spec
+    option_spec.update({'title-below': directives.flag})
+    
+    def run(self):
+        result = tables.RSTTable.run(self)
+        (table_node,) = result
+        
+        table_node['title-below'] = 'title-below' in self.options
+        
+        return [table_node]   
 
+directives.register_directive('table', RSTTable)
 directives.register_directive('figure', Figure)
